# earth-polychromatic-imaging-camera-api

./: .gitignore  Dockerfile.lambda  ECR_TAGGING_STRATEGY.md  README.md  conftest.py  dev-check.py  epic_s3_downloader.py  fetch_test_data.py  lambda_handler.py  lambda_test_payload.json  pyproject.toml  verify_endpoints.py
.github/workflows/: ci-cd.yml
src/earth_polychromatic_api/: __init__.py  cli.py  client.py  models.py  service.py
src/tests/: __init__.py  test_epic_api.py  test_lambda_integration.py  test_typed_methods.py
src/tests/test_datasets/: aerosol_all_dates_response.json  aerosol_recent_response.json  cloud_all_dates_response.json  cloud_recent_response.json  enhanced_all_dates_response.json  enhanced_date_response.json  enhanced_recent_response.json  natural_all_dates_response.json  natural_recent_response.json
test_datasets/: cloud_recent_response.json  natural_all_dates_response.json  natural_date_response.json
