[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "earth-polychromatic-api"
version = "0.1.0"
description = "A Python client for NASA's Earth Polychromatic Imaging Camera (EPIC) API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Cameron Zabriskie", email = "your.email@example.com" },
]
keywords = ["nasa", "epic", "earth", "satellite", "imagery", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "requests-mock>=1.9.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
    "bandit[toml]>=1.7.0",
    "safety>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/czabriskie/earth-polychromatic-images"
Repository = "https://github.com/czabriskie/earth-polychromatic-images"
Documentation = "https://github.com/czabriskie/earth-polychromatic-images#readme"
Issues = "https://github.com/czabriskie/earth-polychromatic-images/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/earth_polychromatic_api"]

[tool.hatch.build.targets.sdist]
include = [
    "src/earth_polychromatic_api",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --cov=earth_polychromatic_api --cov-report=term-missing --cov-report=xml"
testpaths = [
    "src/tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "unit: marks tests as unit tests",
]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".git",
    "__pycache__",
    ".pytest_cache",
    ".ruff_cache",
    "build",
    "dist",
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
]
ignore = [
    "S101",  # Use of `assert` detected
    "T201",  # `print` found (allow print in scripts)
]

[tool.ruff.lint.per-file-ignores]
[tool.ruff.lint.per-file-ignores]
"src/tests/*" = ["S101"]  # Allow assert statements in tests
"verify_endpoints.py" = ["T201"]  # Allow print statements in verification script
"epic_s3_downloader.py" = ["T201", "PLR0912", "PLR0913", "PLR0915", "DTZ007"]  # Allow prints and complexity in utility script
"fetch_test_data.py" = ["T201"]     # Allow prints in scripts
"dev-check.py" = ["T201", "S603", "ARG001"]  # Allow prints, subprocess, and unused args in scripts
"verify_endpoints.py" = ["T201", "D212", "D415", "PERF203", "RUF001", "F401", "E501", "RET505", "W292", "W293"]  # Allow prints and other script-specific rules

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "requests_mock.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "earth_polychromatic_api.models"
disallow_untyped_defs = false

[tool.coverage.run]
source = ["src/earth_polychromatic_api"]
omit = [
    "src/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]